--- a/LernerPython - 2024-08Aug-cleaning.ipynb
+++ b/LernerPython - 2024-08Aug-cleaning.ipynb
@@ -3708,6 +3708,220 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 154,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dtype('int64')"
+      ]
+     },
+     "execution_count": 154,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Street Code1'].dtype"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 155,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Unnamed: 0                                    int64\n",
+       "Summons Number                                int64\n",
+       "Plate ID                                     object\n",
+       "Registration State                           object\n",
+       "Plate Type                                   object\n",
+       "Issue Date                           datetime64[ns]\n",
+       "Violation Code                                int64\n",
+       "Vehicle Body Type                            object\n",
+       "Vehicle Make                                 object\n",
+       "Issuing Agency                               object\n",
+       "Street Code1                                  int64\n",
+       "Street Code2                                  int64\n",
+       "Street Code3                                  int64\n",
+       "Vehicle Expiration Date                       int64\n",
+       "Violation Location                          float64\n",
+       "Violation Precinct                            int64\n",
+       "Issuer Precinct                               int64\n",
+       "Issuer Code                                   int64\n",
+       "Issuer Command                               object\n",
+       "Issuer Squad                                 object\n",
+       "Violation Time                               object\n",
+       "Time First Observed                          object\n",
+       "Violation County                             object\n",
+       "Violation In Front Of Or Opposite            object\n",
+       "House Number                                 object\n",
+       "Street Name                                  object\n",
+       "Intersecting Street                          object\n",
+       "Date First Observed                           int64\n",
+       "Law Section                                   int64\n",
+       "Sub Division                                 object\n",
+       "Violation Legal Code                         object\n",
+       "Days Parking In Effect                       object\n",
+       "From Hours In Effect                         object\n",
+       "To Hours In Effect                           object\n",
+       "Vehicle Color                                object\n",
+       "Unregistered Vehicle?                       float64\n",
+       "Vehicle Year                                  int64\n",
+       "Meter Number                                 object\n",
+       "Feet From Curb                                int64\n",
+       "Violation Post Code                          object\n",
+       "Violation Description                        object\n",
+       "No Standing or Stopping Violation           float64\n",
+       "Hydrant Violation                           float64\n",
+       "Double Parking Violation                    float64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 155,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 156,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Days Parking In Effect\n",
+       "YYYYYYY    345688\n",
+       "YYYYYY     177353\n",
+       "YYYYY       91167\n",
+       "Y  Y        53692\n",
+       "Y           46104\n",
+       "            ...  \n",
+       "Y   Y Y         1\n",
+       "YY YY Y         1\n",
+       "BYYYYBY         1\n",
+       "Y YYY Y         1\n",
+       "YYYYBBY         1\n",
+       "Name: count, Length: 116, dtype: int64"
+      ]
+     },
+     "execution_count": 156,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Days Parking In Effect'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 157,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Violation Post Code\n",
+       "01      33108\n",
+       "99      31341\n",
+       "C       17468\n",
+       "A       17432\n",
+       "03      15550\n",
+       "        ...  \n",
+       "142         1\n",
+       "0000        1\n",
+       "195         1\n",
+       "178         1\n",
+       "119         1\n",
+       "Name: count, Length: 430, dtype: int64"
+      ]
+     },
+     "execution_count": 157,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Violation Post Code'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 159,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Unnamed: 0                                 0\n",
+       "Summons Number                             0\n",
+       "Plate ID                                  24\n",
+       "Registration State                         0\n",
+       "Plate Type                                 0\n",
+       "Issue Date                                 0\n",
+       "Violation Code                             0\n",
+       "Vehicle Body Type                       4476\n",
+       "Vehicle Make                            6322\n",
+       "Issuing Agency                             0\n",
+       "Street Code1                               0\n",
+       "Street Code2                               0\n",
+       "Street Code3                               0\n",
+       "Vehicle Expiration Date                    0\n",
+       "Violation Location                    453605\n",
+       "Violation Precinct                         0\n",
+       "Issuer Precinct                            0\n",
+       "Issuer Code                                0\n",
+       "Issuer Command                        444885\n",
+       "Issuer Squad                          444933\n",
+       "Violation Time                            29\n",
+       "Time First Observed                  1195146\n",
+       "Violation County                        4016\n",
+       "Violation In Front Of Or Opposite     453424\n",
+       "House Number                          461513\n",
+       "Street Name                              142\n",
+       "Intersecting Street                   689290\n",
+       "Date First Observed                        0\n",
+       "Law Section                                0\n",
+       "Sub Division                             234\n",
+       "Violation Legal Code                  804687\n",
+       "Days Parking In Effect                444932\n",
+       "From Hours In Effect                  780073\n",
+       "To Hours In Effect                    780073\n",
+       "Vehicle Color                          39251\n",
+       "Unregistered Vehicle?                1169403\n",
+       "Vehicle Year                               0\n",
+       "Meter Number                         1167116\n",
+       "Feet From Curb                             0\n",
+       "Violation Post Code                   525054\n",
+       "Violation Description                 804641\n",
+       "No Standing or Stopping Violation    1249573\n",
+       "Hydrant Violation                    1249573\n",
+       "Double Parking Violation             1249573\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 159,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Which columns, if any, have NaN values? What could/should we do about that?\n",
+    "\n",
+    "df.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
