--- a/LernerPython - 2024-08Aug-cleaning.ipynb
+++ b/LernerPython - 2024-08Aug-cleaning.ipynb
@@ -4344,7 +4344,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# how can we clean this"
+    "# how can we clean this up?\n",
+    "# we want to have standardized data about the color\n",
+    "\n",
+    "# one good option: df['Vehicle Color'].replace, passing it a dict\n",
+    "\n",
+    "color_dict = {'WH':'WHITE',\n",
+    "              'GY':'GRAY',\n",
+    "              'BK':'BLACK',\n",
+    "              'BL':'BLUE',\n",
+    "              'RD':'RED',\n",
+    "              'GREY':'GRAY',\n",
+    "              'GR': 'GRAY'}\n",
+    "\n"
    ]
   }
  ],
