--- a/LernerPython - 2024-08Aug-cleaning.ipynb
+++ b/LernerPython - 2024-08Aug-cleaning.ipynb
@@ -4340,9 +4340,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 166,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Vehicle Color\n",
+       "WHITE    344203\n",
+       "GRAY     288157\n",
+       "BLACK    265437\n",
+       "BLUE      95237\n",
+       "RED       64270\n",
+       "BROWN     39776\n",
+       "SILVE     19126\n",
+       "TAN       14268\n",
+       "YW         9830\n",
+       "OTHER      6002\n",
+       "GREEN      5929\n",
+       "GL         5398\n",
+       "MR         4329\n",
+       "YELLO      3361\n",
+       "WHI        2825\n",
+       "OR         2755\n",
+       "WT         2545\n",
+       "WT.        2425\n",
+       "GOLD       2214\n",
+       "GY.        2212\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 166,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# how can we clean this up?\n",
     "# we want to have standardized data about the color\n",
@@ -4355,9 +4387,23 @@
     "              'BL':'BLUE',\n",
     "              'RD':'RED',\n",
     "              'GREY':'GRAY',\n",
-    "              'GR': 'GRAY'}\n",
-    "\n"
+    "              'GR': 'GRAY',\n",
+    "             'TN':'TAN',\n",
+    "             'BR':'BROWN',\n",
+    "             'BLK':'BLACK',\n",
+    "             'GRY':'GRAY',\n",
+    "             'WHT':'WHITE',\n",
+    "             'BK.':'BLACK'}\n",
+    "\n",
+    "df['Vehicle Color'].replace(color_dict).value_counts().head(20)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
