--- a/LernerPython - 2024-08Aug-cleaning.ipynb
+++ b/LernerPython - 2024-08Aug-cleaning.ipynb
@@ -4399,6 +4399,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Missing data is a problem\n",
+    "\n",
+    "Sometimes, we can remove missing data (with `dropna`). Sometimes, we can replace it with useful data, using `fillna`. But sometimes, we don't want to fill in a single value based on the entire series. Rather, we want the filled-in value to represent what could have been, or what reasonably can be assumed to be a correct value.\n",
+    "\n",
+    "This is known as *interpolation*. It's a common statistical technique. The idea is that we take `NaN` values and we replace them with what could plausibly be the value.  Most of the time, we take the mean of the two values around the `NaN`, and use that instead."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
