--- a/LernerPython - 2024-08Aug-cleaning.ipynb
+++ b/LernerPython - 2024-08Aug-cleaning.ipynb
@@ -4411,6 +4411,65 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 167,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s = Series([34, 33, 34, 35, 35, 34, 35, 36, 35],\n",
+    "           index='Wed Thu Fri Sat Sun Mon Tue Wed Thu'.split())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 168,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Wed    34\n",
+       "Thu    33\n",
+       "Fri    34\n",
+       "Sat    35\n",
+       "Sun    35\n",
+       "Mon    34\n",
+       "Tue    35\n",
+       "Wed    36\n",
+       "Thu    35\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 168,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 169,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "34.55555555555556"
+      ]
+     },
+     "execution_count": 169,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
