--- a/LernerPython - 2024-08Aug-cleaning.ipynb
+++ b/LernerPython - 2024-08Aug-cleaning.ipynb
@@ -4470,6 +4470,116 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 170,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s = Series([34, 33, np.nan, 35, 35, np.nan, 35, np.nan, 35],\n",
+    "           index='Wed Thu Fri Sat Sun Mon Tue Wed Thu'.split())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 171,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Wed    34.0\n",
+       "Thu    33.0\n",
+       "Fri     NaN\n",
+       "Sat    35.0\n",
+       "Sun    35.0\n",
+       "Mon     NaN\n",
+       "Tue    35.0\n",
+       "Wed     NaN\n",
+       "Thu    35.0\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 171,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 172,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Wed    34.0\n",
+       "Thu    33.0\n",
+       "Fri    34.0\n",
+       "Sat    35.0\n",
+       "Sun    35.0\n",
+       "Mon    35.0\n",
+       "Tue    35.0\n",
+       "Wed    35.0\n",
+       "Thu    35.0\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 172,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# we can assume that temperatures rarely skyrocket or plunge from one day to the next\n",
+    "# so this is a reasonable place for use to use interpolation\n",
+    "\n",
+    "s.interpolate()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 173,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s = Series([34, 33, np.nan, 35, np.nan, np.nan, 35, np.nan, 35],\n",
+    "           index='Wed Thu Fri Sat Sun Mon Tue Wed Thu'.split())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 177,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Wed    34.0\n",
+       "Thu    33.0\n",
+       "Fri     NaN\n",
+       "Sat    35.0\n",
+       "Sun     NaN\n",
+       "Mon     NaN\n",
+       "Tue    35.0\n",
+       "Wed     NaN\n",
+       "Thu    35.0\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 177,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s.interpolate()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
