--- a/LernerPython - 2024-08Aug-cleaning.ipynb
+++ b/LernerPython - 2024-08Aug-cleaning.ipynb
@@ -4541,41 +4541,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [],
    "source": [
-    "s = Series([34, 33, np.nan, 35, np.nan, np.nan, 35, np.nan, 35],\n",
+    "s = Series([34, np.nan, np.nan, 35, 35, np.nan, 35, np.nan, 35],\n",
     "           index='Wed Thu Fri Sat Sun Mon Tue Wed Thu'.split())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Wed    34.0\n",
-       "Thu    33.0\n",
-       "Fri     NaN\n",
-       "Sat    35.0\n",
-       "Sun     NaN\n",
-       "Mon     NaN\n",
-       "Tue    35.0\n",
-       "Wed     NaN\n",
-       "Thu    35.0\n",
+       "Wed    34.000000\n",
+       "Thu    34.333333\n",
+       "Fri    34.666667\n",
+       "Sat    35.000000\n",
+       "Sun    35.000000\n",
+       "Mon    35.000000\n",
+       "Tue    35.000000\n",
+       "Wed    35.000000\n",
+       "Thu    35.000000\n",
        "dtype: float64"
       ]
      },
-     "execution_count": 177,
+     "execution_count": 181,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "s.interpolate()"
+    "s.interpolate("
    ]
   },
   {
